@@ -1,3 +1,7 @@
+drkns 13.11.2016 18:38:58 +0200 - build 4837
+
+1. Уточнение 4834.
+
 drkns 13.11.2016 14:47:30 +0200 - build 4836
 
 1. 0003348: Far(build 4834) Trap on show folder/file attribute dialog
